# elzo-clock

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.roadmap/: project_profile.json
docs/: PUBLISH.md
docs/governance/: project-operational-contract.md
docs/qa/: ECLOCK-030.md  ECLOCK-050-google-calendar.md  ECLOCK-063.md  ECLOCK-065.md  ECLOCK-067-state-machine.md  ECLOCK-069-agenda-today.md  ECLOCK-070-operational-panel.md  ECLOCK-071-layout.md  ECLOCK-SEC-REMEDIATION-QA.md  project-onboarding.md
docs/security/: residual-risks.md
docs/spec/: ECLOCK-001.md  ECLOCK-050-google-calendar.md  ECLOCK-067-state-machine.md  ECLOCK-068-language-selector.md  ECLOCK-069-agenda-today.md  ECLOCK-070-operational-panel.md  ECLOCK-SEC-REMEDIATION.md  GOV-PROFILE-001.md
scripts/: eclock-esaa  eclock-gcal  eclock-sysinfo  eclock_esaa_state.py  test_eclock_esaa_state.py
src/: app.rs  clock_digits.rs  config.rs  main.rs  sanitize.rs  theme.rs  widgets.rs
