[package]
name = "elzo-clock"
version = "0.1.0"
edition = "2021"
description = "Personal terminal clock dashboard with command widgets"
license = "MIT"
authors = ["Elzo"]
readme = "README.md"
keywords = ["tui", "clock", "dashboard", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "eclock"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
